cmake_minimum_required(VERSION 2.8.9)

project(osgTestBed)
# automatically add CMAKE_CURRENT_SOURCE_DIR and CMAKE_CURRENT_BINARY_DIR to the include directories in every directory
SET(CMAKE_INCLUDE_CURRENT_DIR yes)


find_package(OpenSceneGraph REQUIRED)

subdirs(
stressVAOpolicy
)
 
SET(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
SET(MODULE_OUTPUT_PATH ${CMAKE_HOME_DIRECTORY}/bin)
SET(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_HOME_DIRECTORY}/lib)

SET(EXECUTABLE_OUTPUT_PATH_DEBUG ${CMAKE_HOME_DIRECTORY}/ar ) 
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_HOME_DIRECTORY}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_HOME_DIRECTORY}/lib)

SET(CMAKE_DEBUG_POSTFIX "d")
